<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_custom_top"
        android:title="@string/settings_section_icons">

        <Preference
            android:key="main.app_icon"
            android:layout="@layout/preference_custom"
            android:summary="@string/pref_summary_app_icon"
            android:title="@string/pref_title_app_icon"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="main.notification_icon"
            android:layout="@layout/preference_custom"
            android:title="@string/pref_title_notification_icon"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="main.circle_icon"
            android:layout="@layout/preference_custom"
            android:title="@string/pref_title_circle_icon"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
